# coqui-ai-Trainer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev.txt  setup.py
.github/actions/setup-uv/: action.yml
.github/workflows/: pypi-release.yml  release-publish.yml  style_check.yml  tests.yml
examples/: train_mnist.py  train_simple_gan.py
tests/: test_config.py  test_continue_train.py  test_generic_utils.py  test_lr_schedulers.py  test_train_batch_size_finder.py  test_train_gan.py  test_train_mnist.py
tests/utils/: mnist.py  train_mnist.py
trainer/: __init__.py  _types.py  callbacks.py  config.py  distribute.py  generic_utils.py  io.py  model.py  torch.py  trainer.py  trainer_utils.py
trainer/logging/: __init__.py  aim_logger.py  base_dash_logger.py  clearml_logger.py  console_logger.py  dummy_logger.py  mlflow_logger.py  tensorboard_logger.py  wandb_logger.py
trainer/utils/: cpu_memory.py  cuda_memory.py  distributed.py
