[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
line-length = 120
target-version = "py38"
lint.extend-select = [
    "I",  # import sorting
]

lint.ignore = [
    "F821",  # TODO: enable
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # init files may have "unused" imports for now
    "F403", # init files may have star imports for now
]
